<resources>
    <string name="app_name">Weather</string>
    <string name="enter_the_name_of_a_city">Enter the Name of a City *</string>
    <string name="go">GO</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="show_weather">show weather</string>
    <string name="text_view">Text View</string>
    <string name="openweather">OpenWeather</string>
    <string name="data_provided_by">Data provided by</string>
</resources>
