<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/weatherImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/appbackground" />

    <EditText
        android:id="@+id/weatherEditText"
        android:layout_width="331dp"
        android:layout_height="53dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_the_name_of_a_city"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weatherImageButton" />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="getWeather"
        android:text="@string/show_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherEditText" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="212dp"
        android:background="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherButton" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toEndOf="@+id/iconImageView"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446"
        app:srcCompat="@android:drawable/list_selector_background" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="230dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="21dp"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/weatherImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/openweatherlogo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/infoTextView1"
        android:layout_width="91dp"
        android:layout_height="21dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="18dp"
        android:text="@string/data_provided_by"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/infoTextView2"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="21dp"
        android:text="@string/openweather"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>